[gd_scene load_steps=7 format=2]

[ext_resource path="res://Objects/Screens.gd" type="Script" id=1]
[ext_resource path="res://Objects/TitleScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/SettingsScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/GameOverScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/audio/menu_click.wav" type="AudioStream" id=5]
[ext_resource path="res://Objects/AboutScreen.tscn" type="PackedScene" id=6]

[node name="Screens" type="Node"]
script = ExtResource( 1 )

[node name="TitleScreen" parent="." instance=ExtResource( 2 )]

[node name="SettingsScreen" parent="." instance=ExtResource( 3 )]

[node name="GameOverScreen" parent="." instance=ExtResource( 4 )]

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="AboutScreen" parent="." instance=ExtResource( 6 )]
